fixed project imagecontent component spacing, mobile, alternation etc

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
     }
   
     @media screen and (min-width: 768px) {
-      transform: translateY(30px);
+      transform: translateY(20px);
   
       &.aos-animate {
         transform: translateY(0);
@@ -40,7 +40,7 @@
     }
   
     @media screen and (min-width: 768px) {
-      transform: translateX(30px);
+      transform: translateX(20px);
   
       &.aos-animate {
         transform: translateX(0);
@@ -57,7 +57,7 @@
     }
   
     @media screen and (min-width: 768px) {
-      transform: translateX(-30px);
+      transform: translateX(-20px);
   
       &.aos-animate {
         transform: translateX(0);
